<resources>
    <string name="app_name">Voice Changer</string>
    <string name="info_loading">Please wait...</string>
    <string name="title_enter_name">Enter Name</string>
    <string name="title_ok">OK</string>
    <string name="title_skip">Skip</string>
    <string name="title_tone_of_voice">Voice Changer</string>
    <string name="info_save_voice">Your voice path is %1$s</string>
    <string name="info_your_name_error">Your name can only contain the alphabet or number characters</string>
    <string name="aar_paused">Paused</string>
    <string name="aar_recording">Recording</string>
    <string name="aar_playing">Playing</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="cut">Cut</string>
    <string name="text_voice_changer">VOICE CHANGER</string>
    <string name="text_intro1">Directly record audio and \n edit by adding effects</string>
    <string name="text_intro2">Open audio on your \n smartphone and add effects \n to this audio</string>
    <string name="text_intro3">Enable you to trim \n audio easily</string>
    <string name="text_start_recording">Start Recording</string>
    <string name="text_my_creation">My Creation</string>
    <string name="text_start_timer">00:00:00</string>
    <string name="text_skip">Skip</string>
    <string name="text_ok">Ok</string>
    <string name="text_name">Name</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete">Delete</string>
    <string name="text_confirm_delete">Do you want to delete?</string>
    <string name="text_please_enter_name">Please enter your name before continuing</string>
    <string name="text_edit">Edit</string>
    <string name="text_share">Share</string>
    <string name="text_ringtone">Ringtone</string>
    <string name="re_name">Rename</string>
    <string name="play_console_license">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnw3LqFNhVmbdCzEc7eaMZTDYqlPARE1/IUfZWLnxEmWcOD2ZB59KbFNp92Wz+CizaGrA9NP2rBgm2zXVGx0oDAgu+MIIGkhqyy5LHP0dDFFEZVG3IsuqgRoqM4at0YFohXtgmc2uqec0AVh748SKBZ2gWuM7tM38ZHNhVhzL7tY5iTd8qUScuZIAwLALog7kuFPEkP1j53eghenbq2rwl4uZual2+OLFzGdLTG7BaBYVHealZwiKKxcYuo3N2ElTkq4SQyhyICO+MvRQ1GJtNTaPEhI9GHm7y5VHV1neb2fsr/154TAJxNN0UyW+MmX1/lnLjlLfMbCPvY+8f6tD2wIDAQAB</string>
    <string name="premium">subcription_remove_ads_month</string>
    <string name="product_id">demo_poduct</string>
    <string name="text_delete_success">Xóa thành công</string>
    <string name="recording_title">Recording</string>
    <string name="pause_title">Pause…</string>
    <string name="encoding_title">Encoding…</string>
    <string name="record_button">Record</string>
    <string name="text_cut">Edit</string>
    <string name="text_edit_effect">Edit Effect</string>
    <string name="text_edit_success">Successfully!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
