<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_popup_menu">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="3"
        android:paddingTop="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--    android:fontFamily="@font/product_sans_regular"-->
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tvRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/re_name"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/rename" />
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tvEditEffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:text="@string/text_edit_effect"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_15dp"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/ic_edit_effect" />
        <!--    android:fontFamily="@font/product_sans_regular"-->
        <TextView
            android:gravity="center"
            android:id="@+id/tvDelete"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:text="@string/text_delete"
            android:layout_marginTop="@dimen/_15dp"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/ic_delete" />

    </LinearLayout>

<!--    android:fontFamily="@font/product_sans_regular"-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tvRingtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:text="@string/text_ringtone"
            android:padding="@dimen/_15dp"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/ic_ringtone" />

        <!--    android:fontFamily="@font/product_sans_regular"-->
        <TextView
            android:id="@+id/tvCut"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:text="@string/text_cut"
            android:textSize="@dimen/_16sp"
            android:padding="@dimen/_15dp"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/ic_cut" />

        <!--    android:fontFamily="@font/product_sans_regular"-->
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tvShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16dp"
            android:text="@string/text_share"
            android:padding="@dimen/_15dp"
            android:background="?attr/selectableItemBackground"
            app:drawableTopCompat="@drawable/ic_share2" />

    </LinearLayout>

<!--    android:fontFamily="@font/product_sans_regular"-->


</LinearLayout>